# llm-wiki

./: .gitignore  AGENTS.md  README.md  pyproject.toml
scripts/: check  reindex  search  wiki.py
scripts/tests/: test_wiki.py
wiki/: index.md
wiki/templates/: entity.md  knowledge.md  source.md
