[project]
name = "llm-wiki"
version = "1.0.0"
description = "Markdown-first Obsidian-compatible knowledge vault tooling."
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["ruff>=0.8"]

[tool.setuptools]
py-modules = []

[tool.ruff]
target-version = "py311"
line-length = 100
extend-include = ["scripts/check", "scripts/reindex", "scripts/search"]

[tool.ruff.lint]
select = ["E", "F", "I"]
